Melhorado para mobile

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 
   <title>Tecnico</title>
 
+  <link rel="icon" type="image/x-icon" href="./images/favicon.ico">
+
   <!-- Loading Bootstrap -->
   <link href="css/bootstrap.css" rel="stylesheet" />
 
