Alterações de texto

--- a/index.html
+++ b/index.html
@@ -199,6 +199,8 @@
             </div>
             <!--end col-md-12-->
 
+            <p class="dark-blue">*Bolsa de estudos reservada por até 72 horas.</p>
+
             <!--end contact form -->
         </div>
         <!--end row-->
@@ -249,8 +251,7 @@
             </div>
             <p class="white" style="margin-bottom: 5px;">Aulas: 2ª a 6ª feira,
               </br> 7h15 - 12h45</p>
-            <p class="white subtext">Carga horária: 3400 horas </br>(3 anos e meio)</p>
-
+            <p class="white subtext ">Carga horária: 3000 horas </br>(3 anos)</p>
             <div class="course-value">
               <p class="white" style="margin-bottom: 0px;"><b>30% DE BOLSA</b></p>
               <p class="white subtext line-through" style="margin-bottom: 0px;">R$ 1.382,00</p>
@@ -277,7 +278,7 @@
             <div class="underline-orange-xl">
               <p class="white" style="margin-bottom: 5px;">Aulas: 2ª a 6ª feira,</br>
                 7h15 - 12h45</p>
-              <p class="white subtext ">Carga horária: 3000 horas </br>(3 anos)</p>
+              <p class="white subtext">Carga horária: 3400 horas </br>(3 anos e meio)</p>
             </div>
             <div class="">
               <p class="white" style="margin-bottom: 0px;"><b>30% DE BOLSA</b></p>
@@ -386,8 +387,6 @@
             </h3>
 
             <ul class="list-description list-health">
-              <li class="dark-blue">→ &nbsp;Laboratórios multidisciplinares de Informática, Química e Edificações.
-              </li>
               <li class="dark-blue">→ &nbsp;Orientação Educacional.</li>
               <li class="dark-blue">→ &nbsp;Projeto de Prática Profissional e Estágio.</li>
               <li class="dark-blue">→ &nbsp;Atividades e treinamentos desportivos.</li>
