--- a/index.html
+++ b/index.html
@@ -99,7 +99,6 @@
     });
   </script>
 
-
 </head>
 
 <body>
@@ -148,6 +147,35 @@
   <!--end home_wrapper -->
 
   <section class="section-white" id="contact">
+    <div class="container-fluid">
+      <div class="circle__row">
+        <div class="circle">
+          <div class="circle--text">
+            <h3 class="white">1ª FATEC particular
+              aprovada em SP
+            </h3>
+          </div>
+        </div>
+        <div class="circle">
+          <div class="circle--text">
+            <h3 class="white">Graduação
+              em até 5 semestres
+            </h3>
+          </div>
+        </div>
+        <div class="circle">
+          <div class="circle--text">
+            <h3 class="white">Receba um certificado ao término de cada módulo e seu diploma de graduação
+              superior ao concluir o curso.</h3>
+          </div>
+        </div>
+        <div class="circle">
+          <div class="circle--text">
+            <h3 class="white">Após concluir o curso superior, você poderá cursar uma</br>pós-graduação!</h3>
+          </div>
+        </div>
+      </div>
+    </div>
     <!--begin container-->
     <div class="form-container">
       <!--begin row-->
@@ -241,147 +269,69 @@
     </div>
     <!--end container-->
   </section>
-
-
-  <!--begin contact -->
-  <section class="section-dark" id="contact">
-    <!--begin container-->
-    <div class="container">
-      <!--begin row-->
-      <div class="row margin-bottom-50">
-        <!--begin col-md-10-->
-        <div class="col-md-10 col-md-offset-1 text-center">
-          <h2 class="section-title dark-blue">
-            CADASTRE-SE E ENTRAREMOS </br> EM CONTATO!
-          </h2>
-        </div>
-        <!--end col-md-10-->
-      </div>
-      <!--end row-->
-
-
-      <!--begin contact form -->
-      <form id="contact-form" class="contact" action="processar_cadastro.php" method="post">
-        <div class="col-md-12">
-          <div class="container-two-input">
-            <div class="form-medium-field">
-              <label for="name">Nome:</label>
-              <input class="contact-input gray-input" required="" name="name" placeholder="Nome" id="name"
-                type="text" />
-            </div>
-            <div class="form-medium-field">
-              <label for="surname">Sobrenome:</label>
-              <input class="contact-input gray-input" required="" name="surname" placeholder="Sobrenome" id="surname"
-                type="text" />
-            </div>
-          </div>
-        </div>
-
-        <div class="col-md-12">
-          <div class="form-field">
-            <label for="email">E-mail:</label>
-            <input class="contact-input gray-input" required="" name="email" placeholder="Email" id="email"
-              type="email" />
-          </div>
-          <div class="form-field">
-            <label for="phone">Telefone:</label>
-            <input class="contact-input gray-input" required="" name="phone" placeholder="(xx) XXXX-XXXX" id="phone"
-              type="tel" />
-          </div>
-        </div>
-
-        <div class="col-md-12">
-          <div class="form-radio form-field">
-            <label for="curso">Curso:</label>
-            <label class="container radio-container">
-              <input type="radio" name="courseOption" id="saude" value="Saude" />
-              <label for="saude">Saúde</label>
-
-              <input type="radio" name="courseOption" id="mba" value="mba" />
-              <label for="mba">MBA</label>
-
-              <input type="radio" name="courseOption" id="quimMeioAmbiente" value="quimMeioAmbiente" />
-              <label for="quimMeioAmbiente">Química e Meio Ambiente</label>
-            </label>
-          </div>
-        </div>
-
-        <div class="col-md-12 button-flex">
-          <input value="FAÇA SEU CADASTRO" id="submit-button" class="contact-submit" type="submit" />
-        </div>
-      </form>
-
-
-      <!--end contact form -->
-    </div>
-    <!--end row-->
-    <!--end container-->
-  </section>
-  <!--end contact-->
-  <!--begin section-grey -->
-
-
-  <!--end section-grey-->
-  <section class="section-light-purple" style="position:relative">
-    <h2 class="circle-title text-center margin-bottom-50 white">O ENSINO, A EXPERIÊNCIA E A EXCELÊNCIA QUE VOCÊ
-      PRECISA</br>PARA SE
-      DESTACAR NO MERCADO DE TRABALHO!</h2>
-    <h3 class="circle-title text-center margin-bottom-20 white">Pós-graduação nas áreas de:</h3>
-
-    <div class="container-fluid">
-      <div class="circle__row">
-        <div class="circle">
-          <img class="circle--image" src="./images/SAUDE.png" />
-          <div class="circle--text">
-            <h3 class="white">SAÚDE</h3>
-
-          </div>
-        </div>
-        <div class="circle">
-          <img class="circle--image" src="./images/NEGOCIOS.png" />
-          <div class="circle--text">
-            <h3 class="white">ENFERMAGEM</h3>
-          </div>
-        </div>
-        <div class="circle">
-          <img class="circle--image" src="./images/QUIMICA-E-MEIO-AMBIENTE.png" />
-          <div class="circle--text">
-            <h3 class="white">QUÍMICA E MEIO AMBIENTE</h3>
-
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
-
-  <section class="section-white" style="position: relative;">
+  <section class="section-faq" style="position: relative;">
     <!--begin container-->
     <div class="container">
       <!--begin row-->
       <div class="row mobile-reverse" style="position: relative;">
         <!--begin col-md-6-->
         <div class="col-md-6 margin-top-10 margin-bottom-30 section-align-center" style="height: 560px;">
-          <h3 class="purple-title purple">
-            POR QUE FAZER A PÓS NAS FACULDADES OSWALDO CRUZ?
-          </h3>
+          <div class="faq active">
 
-          <ul class="list-description list-health">
-            <li class="purple">O Centro de Pós-Graduação e Pesquisa Oswaldo Cruz <b>já formou mais de 25 mil
-                especialistas
-                em 30 anos.</b></li>
-            <li class="purple"><b>Professores pesquisadores e referências na área.</b></li>
-            <li class="purple">Investimento parcelado em até <b>30x.</b></li>
-            <li class="purple"><b>10% de desconto</b> para ex-alunos Oswaldo Cruz</li>
-            <li class="purple"><b>20% de desconto</b> no valor total do curso para empresas conveniadas: <b>Eurofarma,
-                Extrafarma,
-                L’Óreal, Record TV</b> e muitas outras. Acesse o nosso site e confira a lista completa.</li>
-          </ul>
-        </div>
-        <!--end col-sm-6-->
-        <!--begin col-md-6-->
-        <div class="col-md-6 complement-image">
-          <img src="./images/PQ-FAZER.png" class="img-600 img-mb-30" alt="imac" />
+            <div class="question">
+              <img class="faq-img" src="/images/iconmonstr-caret-right-filled.svg" width="35px">
+              <h3 class="white">Curso tecnólogo é uma graduação superior?</h3>
+            </div>
+            <div class="answer">
+              <p class="cyan">Sim, o curso tecnólogo é uma graduação de nível superior semelhante aos cursos de
+                bacharelado e licenciatura.</p>
+            </div>
+          </div>
+          <div class="faq">
+
+            <div class="question">
+              <img class="faq-img" src="/images/iconmonstr-caret-right-filled.svg" width="35px">
+              <h3 class="white">Quais os diferenciais do curso tecnólogo?</h3>
+            </div>
+            <div class="answer">
+              <p class="cyan">O curso tecnólogo oferece uma formação específica e destinada para uma determinada área do
+                mercado de trabalho.
+              </p>
+            </div>
+          </div>
+          <div class="faq">
+
+            <div class="question">
+              <img class="faq-img" src="/images/iconmonstr-caret-right-filled.svg" width="35px">
+              <h3 class="white">O tecnólogo pode cursar pós-graduação?</h3>
+            </div>
+            <div class="answer">
+              <p class="cyan">Sim, pode. Você pode se formar em tecnólogo na FATEC Oswaldo Cruz em 2,5 anos e se cursar
+                uma pós em até 1,5 anos terá também o título de especialista</p>
+            </div>
+          </div>
+          <div class="faq">
+
+            <div class="question">
+              <img class="faq-img" src="/images/iconmonstr-caret-right-filled.svg" width="35px">
+              <h3 class="white">O que faz um tecnólogo?</h3>
+            </div>
+            <div class="answer">
+              <p class="cyan">Embora receba uma formação específica, o tecnólogo pode atuar na parte operacional,
+                coordenação, gestão e direção da sua área de formação</p>
+            </div>
+          </div>
+          <div class="faq">
+
+            <div class="question">
+              <img class="faq-img" src="/images/iconmonstr-caret-right-filled.svg" width="35px">
+              <h3 class="white">Qual a importância do tecnólogo?</h3>
+            </div>
+            <div class="answer">
+              <p class="cyan">O profissional tecnólogo é valioso para o mercado de trabalho pois oferece mão de obra
+                qualificada especializada. Por isso, os cursos tecnólogos oferecem alta empregabilidade</p>
+            </div>
+          </div>
         </div>
         <!--end col-sm-6-->
       </div>
@@ -390,157 +340,70 @@
     <!--end container-->
   </section>
 
-  <section class="section-light-purple" style="position:relative">
-    <div class="container-fluid course-card-container">
-      <div class="course-card-content">
-        <div class="course-card orange-border">
-          <div class="text-center fill-card">
-            <p class="white underline-orange">NEGÓCIOS</br>Especialização</p>
-            <h3 class="white underline-orange">MBA EM MARKETING<br>FAMACÊUTICO</h3>
-            <p class="white underline-orange"><b>30x R$713,00</b></p>
-            <p class="white"><b>Início das aulas:</br>24/02/2023</b></p>
+  <section class="section-dark-blue" style="position:relative">
+    <div class="main">
+      <ul class="cards">
+        <li class="cards_item">
+          <div class="card">
+            <div class="card_image"><img src="https://picsum.photos/500/300/?image=10"></div>
+            <div class="card_content">
+              <h2 class="card_title">Card Grid Layout</h2>
+              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+              <button class="btn card_btn">Read More</button>
+            </div>
           </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=85" class="btn btn-orange-fluid" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-
-      <div class="course-card-content">
-        <div class="course-card blue-border">
-          <div class="text-center fill-card">
-            <p class="white underline-blue">SAÚDE</br>Especialização</p>
-            <h3 class="white underline-blue">ACESSO EM SAÚDE E<br>FARMACOECONOMIA</h3>
-            <p class="white underline-blue"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas:</br>24/02/2023</b></p>
+        </li>
+        <li class="cards_item">
+          <div class="card">
+            <div class="card_image"><img src="https://picsum.photos/500/300/?image=5"></div>
+            <div class="card_content">
+              <h2 class="card_title">Card Grid Layout</h2>
+              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+              <button class="btn card_btn">Read More</button>
+            </div>
           </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=464" class="btn btn-blue-fluid" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-
-      <div class="course-card-content">
-        <div class="course-card red-border">
-          <div class="text-center fill-card">
-            <p class="white underline-red">QUÍMICA E MEIO AMBIENTE</br>Especialização</p>
-            <h3 class="white underline-red">ANÁLISE INSTRUMENTAL<br>AVANÇADA</h3>
-            <p class="white underline-red"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas:</br>01/04/2023</b></p>
+        </li>
+        <li class="cards_item">
+          <div class="card">
+            <div class="card_image"><img src="https://picsum.photos/500/300/?image=11"></div>
+            <div class="card_content">
+              <h2 class="card_title">Card Grid Layout</h2>
+              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+              <button class="btn card_btn">Read More</button>
+            </div>
           </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=154" class="btn btn-red-fluid" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-    </div>
-
-    <div class="container-fluid course-card-container">
-      <div class="course-card-content">
-        <div class="course-card blue-border">
-          <div class="text-center fill-card">
-            <p class="white underline-blue">SAÚDE</br>Especialização</p>
-            <h3 class="white underline-blue">CIÉNCIAS<br>FORENSES</h3>
-            <p class="white underline-blue"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas:</br>25/02/2023</b></p>
+        </li>
+        <li class="cards_item">
+          <div class="card">
+            <div class="card_image"><img src="https://picsum.photos/500/300/?image=14"></div>
+            <div class="card_content">
+              <h2 class="card_title">Card Grid Layout</h2>
+              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+              <button class="btn card_btn">Read More</button>
+            </div>
           </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=160" class="btn btn-blue-fluid" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-
-      <div class="course-card-content">
-        <div class="course-card blue-border">
-          <div class="text-center fill-card">
-            <p class="white underline-blue">SAÚDE</br>Especialização</p>
-            <h3 class="white underline-blue">CIÊNCIAS<br>TOXICOLÓGICAS</h3>
-            <p class="white underline-blue"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas:</br>04/03/2023</b></p>
+        </li>
+        <li class="cards_item">
+          <div class="card">
+            <div class="card_image"><img src="https://picsum.photos/500/300/?image=17"></div>
+            <div class="card_content">
+              <h2 class="card_title">Card Grid Layout</h2>
+              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+              <button class="btn card_btn">Read More</button>
+            </div>
           </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=159" class="btn btn-blue-fluid" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-
-      <div class="course-card-content">
-        <div class="course-card orange-border">
-          <div class="text-center fill-card">
-            <p class="white underline-orange">NEGÓCIOS</br>Especialização</p>
-            <h3 class="white underline-orange">MBA EM GESTÃO HOSPITALAR E SISTEMAS DE SAÚDE</h3>
-            <p class="white underline-orange"><b>30x R$713,00</b></p>
-            <p class="white"><b>Início das aulas:</br>24/02/2023</b></p>
+        </li>
+        <li class="cards_item">
+          <div class="card">
+            <div class="card_image"><img src="https://picsum.photos/500/300/?image=2"></div>
+            <div class="card_content">
+              <h2 class="card_title">Card Grid Layout</h2>
+              <p class="card_text">Demo of pixel perfect pure CSS simple responsive card grid layout</p>
+              <button class="btn card_btn">Read More</button>
+            </div>
           </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=53" class="btn btn-orange-fluid" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-    </div>
-
-    <div class="container-fluid course-card-container">
-      <div class="course-card-content">
-        <div class="course-card large-card blue-border">
-          <div class="text-center fill-card">
-            <p class="white underline-blue">SAÚDE</br>Especialização</p>
-            <h3 class="white underline-blue">COSMETOLOGIA</h3>
-            <p class="white underline-blue"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas: 06/05/2023</b></p>
-          </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=50" class="btn btn-blue-fluid large-card-btn"
-          onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-
-      <div class="course-card-content">
-        <div class="course-card large-card blue-border">
-          <div class="text-center fill-card">
-            <p class="white underline-blue">SAÚDE</br>Especialização</p>
-            <h3 class="white underline-blue">FARMÁCIA ESTÉTICA</h3>
-            <p class="white underline-blue"><b>30x R$875,00</b></p>
-            <p class="white"><b>Início das aulas: 25/05/2023</b></p>
-          </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=577"
-          class="btn btn-blue-fluid large-card-btn" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-    </div>
-
-    <div class="container-fluid course-card-container">
-      <div class="course-card-content">
-        <div class="course-card large-card red-border">
-          <div class="text-center fill-card">
-            <p class="white underline-red">QUÍMICA E MEIO AMBIENTE</br>Especialização</p>
-            <h3 class="white underline-red">PROCESSOS INDUSTRIAIS QUÍMICOS, PETROQUÍMICOS E FARMACÊUTICOS</h3>
-            <p class="white underline-red"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas:</br>17/06/2023</b></p>
-          </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=289" class="btn btn-red-fluid large-card-btn"
-          onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
-
-      <div class="course-card-content">
-        <div class="course-card large-card blue-border">
-          <div class="text-center fill-card">
-            <p class="white underline-blue">SAÚDE</br>Especialização</p>
-            <h3 class="white underline-blue">TECNOLOGIA INDUSTRIAL</br>E GESTÃO FARMACÊUTICA</h3>
-            <p class="white underline-blue"><b>30x R$813,00</b></p>
-            <p class="white"><b>Início das aulas:</br>04/03/2023</b></p>
-          </div>
-        </div>
-        <a href="https://www.oswaldocruz.br/pos/sip/sip_curso.asp?id_curso=306"
-          class="btn btn-blue-fluid large-card-btn" onclick="">
-          <h5 class="white">SAIBA MAIS</h5>
-        </a>
-      </div>
+        </li>
+      </ul>
     </div>
   </section>
 
@@ -613,6 +476,7 @@
   <script src="js/wow.js"></script>
   <script src="js/custom.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="js/app.js"></script>
 </body>
 
 </html>
